# optimal-ml

./: CMakeLists.txt  README.md
cmake/: SourcesAndHeaders.cmake
include/: classify.h  optimal_pla.h  optimalpla.hpp  perceptron.hpp
src/: optimal_pla.c  perceptron.cpp  pla.cpp
